resolved the issue of the modal content not showing on seperate lines

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,11 +103,12 @@
     max-height: auto;
     max-height: 90%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     position: relative;
-    overflow: auto; /* Enables Scrolling */
+    overflow-y: auto; /* Enables Scrolling */
 }
 
 /* Modal Close Button */
